--- a/Benedetti.html
+++ b/Benedetti.html
@@ -73,6 +73,13 @@
   .img1{
     width: 100%;
   }
+  .card.mb-3-g{
+    width: 100%;
+    left: 0%;
+  }
+  .card-text-g{
+    width: 60vw;
+  }
 }
 
 
@@ -82,6 +89,10 @@
   }
   .card.mb-3-2{
     height: 250px!important;
+  }
+  .card.mb-3-g{
+    width: 100%;
+    left: 0%;
   }
 }
 
@@ -93,6 +104,10 @@
   .card.mb-3-2{
     height: 300px!important;
   }
+  .card.mb-3-g{
+    width: 79%;
+    left: 11%;
+  }
 }
 
 
@@ -102,6 +117,10 @@
   }
   .card.mb-3-2{
     height: 350px!important;
+  }
+  .card.mb-3-g{
+    width: 92%;
+    left: 2.7%;
   }
 }
 
@@ -113,6 +132,10 @@
   .card.mb-3-2{
     height: 400px!important;
   }
+  .card.mb-3-g{
+    width: 89%;
+    left: 3%;
+  }
 }
 
 
@@ -123,6 +146,45 @@
   .card.mb-3-2{
     height: 450px!important;
   }
+  .card.mb-3-g{
+    width: 87%;
+    left: 3.3%;
+  }
+}
+@media (min-width: 1441px) and (max-width: 1660px) {
+  .card.mb-3{
+    height: 550px!important;
+  }
+  .card.mb-3-2{
+    height: 550px!important;
+  }
+  .card.mb-3-g{
+    width: 86%;
+    left: 3.3%;
+  }
+}
+@media (min-width: 1661px) and (max-width: 1860px) {
+  .card.mb-3{
+    height: 620px!important;
+  }
+  .card.mb-3-2{
+    height: 620px!important;
+  }
+  .card.mb-3-g{
+    width: 86%;
+    left: 3.3%;
+  }
+}
+
+@media (min-width: 1861px) and (max-width: 2000px) {
+ 
+  .card.mb-3{
+    height: 720px!important;
+  }
+  .card.mb-3-2{
+    height: 720px!important;
+  }
+
 }
 
     </style>
