--- a/Benedetti.html
+++ b/Benedetti.html
@@ -48,7 +48,9 @@
 
 @media (min-width: 0px) and (max-width: 480px) {
 
-  
+   .container-fluid.footer{
+    top: 200px;
+  }
   .col-sml-12 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 100%;
