--- a/Benedetti.html
+++ b/Benedetti.html
@@ -312,8 +312,7 @@
       <div class="card mb-3-g" style="position: relative; padding: 15px;">
 
         <!-- Primeira imagem ajustada para descer -->
-        <img src="condominio.png" class="cardimg-1" alt="Imagem 1" 
-             style="position: relative; top: 9.191vw; margin-bottom: 0.735vw;">
+        <img src="condominio.png" class="cardimg-1" alt="Imagem 1" >
 
         <div class="card-body-special">
           
@@ -336,8 +335,7 @@
             </p>
 
             <!-- Segunda imagem ajustada para subir -->
-            <img src="condominio.png" class="cardimg-2" alt="Imagem 2" 
-                 style="position: relative; top: clamp(-105px,-9.853vw,-1005px); margin-left: 0.735vw;">
+            <img src="condominio.png" class="cardimg-2" alt="Imagem 2" >
           
           </div>
         </div>
